# Chess

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
src/: ChessDefines.h  ChessEngine.cpp  ChessEngine.h  CommandGenerator.cpp  CommandGenerator.h  DragDropManager.cpp  DragDropManager.h  GameContext.cpp  GameContext.h  GameModel.cpp  GameModel.h  MainAppDelegate.cpp  MainAppDelegate.h  Move.cpp  Move.h  TextureStorage.cpp  TextureStorage.h  Util.cpp  Util.h  Utils.cpp  Utils.h  View.cpp  View.h  Window.cpp  Window.h  main.cpp
